cmake_minimum_required(VERSION 3.13)
include(/home/saulcrow/pico/pico-sdk/external/pico_sdk_import.cmake)
include(/home/saulcrow/pico/pico-sdk/freertos-pico/FreeRTOS-Kernel/portable/ThirdParty/GCC/RP2040/FreeRTOS_Kernel_import.cmake)
project(BlinkF C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
pico_sdk_init()
add_executable(BlinkF BlinkF.c)
target_include_directories(BlinkF PRIVATE ${CMAKE_CURRENT_LIST_DIR})
target_link_libraries(BlinkF pico_stdlib FreeRTOS-Kernel FreeRTOS-Kernel-Heap4)
pico_enable_stdio_uart(BlinkF 1)
pico_enable_stdio_usb(BlinkF 1)

pico_add_extra_outputs(BlinkF)
